# GEA_Assignment5

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  ComponentBase.h  ECManager.cpp  ECManager.h  EComponents.h  Entity.cpp  Entity.h  InputSystem.cpp  InputSystem.h  MemoryManager.h  componentBuilder.bat
engine/gameplay/: CMakeLists.txt  CameraCmp.cpp  CameraCmp.h  ColliderCmp.cpp  ColliderCmp.h  LigthCmp.cpp  LigthCmp.h  RenderableCmp.cpp  RenderableCmp.h  RigidbodyCmp.cpp  RigidbodyCmp.h  ShipCmp.cpp  ShipCmp.h  TransformCmp.cpp  TransformCmp.h
engine/render/: physics.cc  physics.h  window.cc  window.h
engine/render/input/: gamepad.cc  gamepad.h  inputserver.cc  inputserver.h  key.h  mouse.h
exts/glfw/: CMakeLists.txt
projects/spacegame/code/: main.cc  spacegameapp.cc  spaceship.h
